--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-spring.application.name=foro-hub
+spring.application.name=forohub
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/foro_hub
+spring.datasource.url=jdbc:mysql://localhost:3306/forohub
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
-server.error.include-stacktrace=never
 server.port=4000
